Enable -Xshare:on by default for new workflow -- so people know immediately if the Leyden optimizations are disabled due to a misconfiguration